--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "db.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node hospital.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "lodash": "^4.17.21",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.7"
   }
