--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "db.js",
   "scripts": {
-    "start": "node hospital.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
